--- a/Dictionary Editor 2/Properties/Resources.resx
+++ b/Dictionary Editor 2/Properties/Resources.resx
@@ -118,6 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="numberOfCurrentWord" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\numberOfCurrentWord.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;windows-1251</value>
+  </data>
+  <data name="osetExamples" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\osetExamples.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="кнопкаСтрелка" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\кнопкаСтрелка.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
